2006-02-02  Joshua Sled  <jsled@asynchronous.org>

	* lib/libqof/qof/qofsession.c (qof_session_load_backend): get+load
	backend configuration after creation.
	* src/backend/file/gnc-backend-file.c (gnc_file_be_get_config):
	fix configuration.
	(gnc_file_be_remove_old_files): Add ".log" suffix to the
	check for to-remove files.  Bug#329670.  Reformat.

2006-02-02  David Hampton  <hampton@employees.org>

	* src/register/register-core/numcell.c: Don't call g_utf8_strlen
	with a NULL pointer.  Fixes 329556.

	* src/gnome-utils/gnc-tree-model-commodity.c:
	* src/gnome-utils/gnc-tree-model-account.c:
	* src/gnome-utils/gnc-tree-model-price.c: Better handling in the
	model event handling functions.  Noticeable in the commodity and
	price trees when adding/deleting the first/last item.

	* src/gnome/dialog-commodities.c: Fix a crash when manipulating
	commodities before crating the first account.

	* src/gnome-utils/gnc-file.c: Re-enable events before processing
	the book-opened hook.  Solves some strange problems in the account
	tree which were caused by the Orphan account being created during
	the callbacks, but no event being sent to the account tree model.

2006-02-02  Derek Atkins  <derek@ihtfp.com>

	* src/backend/file/io-gncxml-v2.c:
	  Specify the output xml encoding as utf8.

2006-02-01  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncInvoice.c:
	  Need to put the new split into the txn as well as the acct
	  before we call xaccSplitSetBaseValue().  Fixes #325890.

	* src/business/business-core/gncInvoice.[ch]:
	  Add new API: gncInvoiceSortEntries()
	* src/business/business-core/gncEntry.c:
	  re-sort the parent when the entry date changes.
	  Only re-sort when the existing date is non-zero (i.e.
	  don't re-sort on the initial setting of the date).
	  Fixes #320566.

	* src/gnome-search/dialog-search.c:
	* src/gnome-search/dialog-search.h:
	  Modify the gnc_search_dialog_create() API to add an optional