@@ -417,6 +417,8 @@ gnc_plugin_page_account_tree_create_widget (GncPluginPage *plugin_page)
 			    TRUE, TRUE, 0);
 
 	tree_view = gnc_tree_view_account_new(FALSE);
+	gnc_tree_view_configure_columns(GNC_TREE_VIEW(tree_view),
+					"description", "total", NULL);
 	g_object_set(G_OBJECT(tree_view),
 		     "gconf-section", GCONF_SECTION,
 		     "show-column-menu", TRUE,
